--- a/src/style/mixins/_grid.scss
+++ b/src/style/mixins/_grid.scss
@@ -36,7 +36,7 @@
 
   .#{$prefix}-center-#{$name} {
     justify-content: center;
-    text-align: center;
+    // text-align: center;
   }
 
   .#{$prefix}-end-#{$name} {
