--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -341,3 +341,13 @@ $grid-breakpoints: (
 ) !default;
 $grid-gutter-compensation:          $grid-gutter-width * 0.5 * -1;
 $grid-half-gutter-width:            $grid-gutter-width * 0.5;
+
+//  Menu
+//
+$menu-bg:                           $white !default;
+$menu-width:                        240px !default;
+$menu-border-color:                 $border-color !default;
+$menu-item-height:                  40px !default;
+$menu-item-color:                   #6e84a3 !default;
+$menu-item-active-color:            $gray-900 !default;
+$menu-item-padding-x:               24px !default;
