--- a/src/icon/style.scss
+++ b/src/icon/style.scss
@@ -4,16 +4,11 @@
 
 @font-face {
   font-family: 'feather';
-  src: url('/static/fonts/feather.eot?t=1525787366991');
-  /* IE9*/
-  src: url('/static/fonts/feather.eot?t=1525787366991#iefix') format('embedded-opentype'),
-  /* IE6-IE8 */
-    url('/static/fonts/feather.woff?t=1525787366991') format('woff'),
-    /* chrome, firefox */
-    url('/static/fonts/feather.ttf?t=1525787366991') format('truetype'),
-    /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-    url('/static/fonts/feather.svg?t=1525787366991#feather') format('svg');
-    /* iOS 4.1- */
+  src: url('#{$icon-base-url}/fonts/feather.eot');
+  src: url('#{$icon-base-url}/fonts/feather.eot#iefix') format('embedded-opentype'),
+    url('#{$icon-base-url}/fonts/feather.woff') format('woff'),
+    url('#{$icon-base-url}/fonts/feather.ttf') format('truetype'),
+    url('#{$icon-base-url}/fonts/feather.svg#feather') format('svg');
 }
 
 .#{$icon-prefix-cls} {
