--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -155,6 +155,7 @@ $mark-bg:                     #fcf8e3 !default;
 //
 $icon-prefix-cls:             dk-icon !default;
 $icon-font-size:              24px !default;
+$icon-base-url:               '/static' !default;
 
 // Tables
 //
