--- a/site/component/common/page.scss
+++ b/site/component/common/page.scss
@@ -106,8 +106,9 @@
 
 .icon-item-wrapper {
   float: left;
-  width: 20%;
+  width: 1 / 3 * 100%;
   padding: 8px;
+  box-sizing: border-box;
 }
 
 .icon-item {
