--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -357,3 +357,5 @@ $menu-item-height:                  40px !default;
 $menu-item-color:                   #6e84a3 !default;
 $menu-item-active-color:            $gray-900 !default;
 $menu-item-padding-x:               24px !default;
+$menu-item-icon-margin-x:           10px !default;
+$menu-item-icon-size:               16px !default;
