--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -355,7 +355,9 @@ $menu-width:                        240px !default;
 $menu-border-color:                 $border-color !default;
 $menu-item-height:                  40px !default;
 $menu-item-color:                   #6e84a3 !default;
-$menu-item-active-color:            $gray-900 !default;
+$menu-item-active-color:            $primary !default;
+$menu-item-active-bg:               mix($white, $primary, 90%) !default;
 $menu-item-padding-x:               24px !default;
 $menu-item-icon-margin-x:           10px !default;
 $menu-item-icon-size:               16px !default;
+$menu-disabled-opacity:             .65 !default;
