--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -236,6 +236,7 @@ $switch-bg:                 #e3ebf6 !default;
 $switch-bg-checked:           $primary !default;
 $switch-transition:           background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 $switch-focus-box-shadow:     0 0 0 1px #fff, 0 0 0 2.5px rgba($component-active-bg, .25) !default;
+$switch-disabled-opacity:     .4 !default;
 
 // Pagination
 //
@@ -361,3 +362,9 @@ $menu-item-padding-x:               24px !default;
 $menu-item-icon-margin-x:           10px !default;
 $menu-item-icon-size:               16px !default;
 $menu-disabled-opacity:             .5 !default;
+
+$menu-dark-bg:                      #152e4d !default;
+$menu-dark-border-color:            $gray-900 !default;
+$menu-dark-item-color:              #6e84a3 !default;
+$menu-dark-item-active-color:       $white !default;
+$menu-dark-item-active-bg:          mix($black, $primary, 75%) !default;
