--- a/src/menu/style.scss
+++ b/src/menu/style.scss
@@ -14,6 +14,7 @@ $menu-prefix-cls: 'dk-menu';
   height: 100%;
   background: $menu-bg;
   border-right: 1px solid $menu-border-color;
+  transition: background .3s, width .2s;
 
   ul,
   ol {
