--- a/site/component/common/sidebar.scss
+++ b/site/component/common/sidebar.scss
@@ -1,29 +1,34 @@
 
-.app-sidebar {
+.sidebar {
   position: fixed;
   top: 0;
   left: 0;
   height: 100%;
   border-right: 1px solid #e3ebf6;
   overflow: scroll;
-}
-.sidebar-logo {
-  display: flex;
-  width: 100%;
-  height: 90px;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
 
-.sidebar-logo-img {
-  width: 54.5px;
-  height: 40px;
-  margin-right: 7px;
-}
+  &-logo {
+    display: flex;
+    width: 100%;
+    height: 90px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 
-.sidebar-logo-title {
-  color: #2c7be5;
-  font-size: 16px;
-  font-weight: 700;
+    &-img {
+      width: 54.5px;
+      height: 40px;
+      margin-right: 7px;
+    }
+
+    &-title {
+      color: #2c7be5;
+      font-size: 16px;
+      font-weight: 700;
+    }
+  }
+
+  &-menu {
+    width: 100%;
+  }
 }
