--- a/site/component/app.scss
+++ b/site/component/app.scss
@@ -57,4 +57,9 @@ code {
   background-color: #f2f4f5;
   border-radius: 3px;
   font-size: .9em;
+  color: #95aac9;
+}
+
+table {
+  line-height: 1.8
 }
