--- a/site/component/common/page.scss
+++ b/site/component/common/page.scss
@@ -138,25 +138,36 @@
 
 .icon-item-wrapper {
   float: left;
-  width: 1 / 3 * 100%;
-  padding: 8px;
+  width: 1 / 5 * 100%;
+  padding: 5px;
   box-sizing: border-box;
 }
 
 .icon-item {
   display: flex;
-  align-items: center;
-  padding: 20px;
-  background-color: #f2f4f5;
+  flex-direction: column;
+  padding: 15px 5px 8px 5px;
+  border: 1px solid #e3ebf6;
   border-radius: 5px;
   cursor: pointer;
+  transition: all .2s;
 
-  &:nth-of-type(4n) {
-    margin-right: 0;
+  > p {
+    margin-top: 8px;
+    margin-bottom: 0;
+    word-wrap: break-word;
+    text-align: center;
+    font-size: 12px;
   }
 
-  >span {
-    margin-left: 10px;
+  &:hover {
+    color: #2c7be5;
+    background-color: #f9fbfd;
+    box-shadow: 0 0 8px 0 rgba(232, 237, 250, .6), 0 2px 4px 0 rgba(232, 237, 250, .5);
+
+    > p {
+      color: #2c7be5;
+    }
   }
 }
 
