--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -227,22 +227,48 @@ $btn-border-radius-sm:        $border-radius-sm !default;
 
 $btn-transition:              color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out !default;
 
+// Input
+//
+$input-height:                      32px !default;
+$input-padding-y:                   11px !default;
+$input-padding-x:                   4px !default;
+
+$input-color:                       $gray-700 !default;
+$input-bg:                          $white !default;
+$input-disabled-bg:                 $gray-200 !default;
+
+$input-border-color:                #d2ddec !default;
+$input-box-shadow:                  inset 0 1px 1px rgba($primary, .075) !default;
+$input-transition:                  border-color .15s ease-in-out, box-shadow .15s ease-in-out !default;
+$input-placeholder-color:           #b1c2d9 !default;
+$input-border-radius:               $border-radius !default;
+$input-border-radius-lg:            $border-radius-lg !default;
+$input-border-radius-sm:            $border-radius-sm !default;
+
+$input-focus-bg:                    $input-bg !default;
+$input-focus-border-color:          $primary !default;
+$input-focus-box-shadow:            0 0 0 2px lighten($component-active-bg, 25%) !default;
+
+$input-hover-border-color:          $input-focus-border-color !default;
+
 // Checkbox
 //
-$checkbox-margin-right:       24px !default;
-$checkbox-active-color:       $primary !default;
-$checkbox-border-radius:      2px !default;
+$checkbox-size:                     $font-size-base !default;
+$checkbox-margin-right:             24px !default;
+$checkbox-active-color:             $primary !default;
+$checkbox-border-radius:            2px !default;
+$checkbox-indicator-transtion:      border-color .25s cubic-bezier(.71, -.46, .29, 1.46), background-color .25s cubic-bezier(.71, -.46, .29, 1.46) !default;
 
 // Switch
 //
-$switch-height:               22px !default;
-$switch-height-sm:            16px !default;
-$switch-height-lg:            28px !default;
-$switch-bg:                 #e3ebf6 !default;
-$switch-bg-checked:           $primary !default;
-$switch-transition:           background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-$switch-focus-box-shadow:     0 0 0 1px #fff, 0 0 0 2.5px rgba($component-active-bg, .25) !default;
-$switch-disabled-opacity:     .4 !default;
+$switch-height:                     22px !default;
+$switch-height-sm:                  16px !default;
+$switch-height-lg:                  28px !default;
+$switch-bg:                       #e3ebf6 !default;
+$switch-bg-checked:                 $primary !default;
+$switch-transition:                 background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+$switch-focus-box-shadow:           0 0 0 1px #fff, 0 0 0 2.5px rgba($component-active-bg, .25) !default;
+$switch-disabled-opacity:           .4 !default;
 
 // Pagination
 //
@@ -281,30 +307,6 @@ $pagination-disabled-bg:            $white !default;
 $pagination-disabled-border-color:  $gray-300 !default;
 $pagination-disabled-opacity:       .65 !default;
 
-
-// Input
-//
-$input-height:                      32px !default;
-$input-padding-y:                   11px !default;
-$input-padding-x:                   4px !default;
-
-$input-color:                       $gray-700 !default;
-$input-bg:                          $white !default;
-$input-disabled-bg:                 $gray-200 !default;
-
-$input-border-color:                #d2ddec !default;
-$input-box-shadow:                  inset 0 1px 1px rgba($primary, .075) !default;
-$input-transition:                  border-color .15s ease-in-out, box-shadow .15s ease-in-out !default;
-$input-placeholder-color:           #b1c2d9 !default;
-$input-border-radius:               $border-radius !default;
-$input-border-radius-lg:            $border-radius-lg !default;
-$input-border-radius-sm:            $border-radius-sm !default;
-
-$input-focus-bg:                    $input-bg !default;
-$input-focus-border-color:          $primary !default;
-$input-focus-box-shadow:            0 0 0 2px lighten($component-active-bg, 25%) !default;
-
-$input-hover-border-color:          $input-focus-border-color !default;
 
 // Alert
 //
