--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -32,16 +32,9 @@ $grays: map-merge(
 
 
 $blue:    #2c7be5 !default;
-$indigo:  #6610f2 !default;
-$purple:  #6f42c1 !default;
-$pink:    #e83e8c !default;
 $red:     #e63757 !default;
-$orange:  #fd7e14 !default;
 $yellow:  #f6c343 !default;
 $green:   #00d97e !default;
-$teal:    #20c997 !default;
-$cyan:    #39afd1 !default;
-
 
 $default:       $gray-100 !default;
 $primary:       $blue !default;
@@ -65,6 +58,21 @@ $theme-colors: map-merge(
   $theme-colors
 );
 
+$ease-base-out:               cubic-bezier(0.7, 0.3, 0.1, 1);
+$ease-base-in:                cubic-bezier(0.9, 0, 0.3, 0.7);
+$ease-out:                    cubic-bezier(0.215, 0.61, 0.355, 1);
+$ease-in:                     cubic-bezier(0.55, 0.055, 0.675, 0.19);
+$ease-in-out:                 cubic-bezier(0.645, 0.045, 0.355, 1);
+$ease-out-back:               cubic-bezier(0.12, 0.4, 0.29, 1.46);
+$ease-in-back:                cubic-bezier(0.71, -0.46, 0.88, 0.6);
+$ease-in-out-back:            cubic-bezier(0.71, -0.46, 0.29, 1.46);
+$ease-out-circ:               cubic-bezier(0.08, 0.82, 0.17, 1);
+$ease-in-circ:                cubic-bezier(0.6, 0.04, 0.98, 0.34);
+$ease-in-out-circ:            cubic-bezier(0.78, 0.14, 0.15, 0.86);
+$ease-out-quint:              cubic-bezier(0.23, 1, 0.32, 1);
+$ease-in-quint:               cubic-bezier(0.755, 0.05, 0.855, 0.06);
+$ease-in-out-quint:           cubic-bezier(0.86, 0, 0.07, 1);
+
 //Body
 //
 $body-bg:                     $white !default;
@@ -76,10 +84,6 @@ $link-color:                  $primary !default;
 $link-decoration:             none !default;
 $link-hover-color:            darken($link-color, 15%) !default;
 $link-hover-decoration:       underline !default;
-
-// Paragraphs
-//
-$paragraph-margin-bottom:     16px !default;
 
 // Components
 //
@@ -97,8 +101,6 @@ $box-shadow-lg:               0 16px 48px rgba($black, .175) !default;
 
 $component-active-color:      $white !default;
 $component-active-bg:         $primary !default;
-
-$caret-width:                 .3em !default;
 
 $transition-base:             all .2s ease-in-out !default;
 $transition-fade:             opacity .15s linear !default;
