--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -228,9 +228,12 @@ $input-hover-border-color:          $input-focus-border-color !default;
 
 // Calendar
 //
+$calendar-color:                    $input-color !default;
+$calendar-border-color:             $input-border-color !default;
+$calendar-item-size:                36px !default;
+$calendar-item-bg:                  #edf2f9 !default;
 $calendar-icon-size:                14px !default;
 $calendar-icon-color:               $input-placeholder-color !default;
-$calendar-container-width:          252px !default;
 $calendar-container-padding:        12px !default;
 $calendar-shadow:                   0 2px 8px rgba($black, .25) !default;
 
