--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -236,6 +236,7 @@ $calendar-icon-size:                14px !default;
 $calendar-icon-color:               $input-placeholder-color !default;
 $calendar-container-padding:        12px !default;
 $calendar-shadow:                   0 2px 8px rgba($black, .25) !default;
+$calendar-transition:               transform 300ms cubic-bezier(0.23, 1, 0.32, 1), opacity 300ms cubic-bezier(0.23, 1, 0.32, 1) !default;
 
 // Checkbox
 //
